recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:5: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:7: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^FourSquare:9: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
  gauche()
        ^